--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,7 @@
 
   {% include head.html %}
 
-  <body>
-
-    {% include sidebar.html %}
+  <body class="theme-base-08">
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
@@ -24,7 +22,6 @@
       </div>
     </div>
 
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-
+    <a class="sidebar-nav" href="/about"></a>
   </body>
 </html>
