Let changes happen!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,12 @@
 
       <div class="container content">
         {{ content }}
+        <div class="block">
+          <p>&copy; 2014</p>
+        </div>
       </div>
     </div>
 
-    <a class="sidebar-nav" href="/about"></a>
+    <a class="sidebar-nav" href="/about.html"></a>
   </body>
 </html>
