Add a simple navigation.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,5 +26,10 @@
     </div>
 
     <a class="sidebar-nav" href="/about.html"></a>
+    <div class="nav">
+      <a href="http://tricks.youknowmymind.com/bcho">@tricks</a>
+      <span class="sep">/</span>
+      <a href="https://github.com/bcho">@github</a>
+    </div>
   </body>
 </html>
