Some css trick for mobile.
I think this may help me to write 😚

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <div class="container content">
         {{ content }}
         <div class="block">
-          <p>&copy; 2014</p>
+          <p>Since 2014</p>
         </div>
       </div>
     </div>
