reading notes: 2015 July Week 3.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
 
     <a class="sidebar-nav" href="/about.html"></a>
     <div class="nav">
+      <a href="/reading-notes/">@reading-notes</a>
+      <span class="sep">/</span>
       <a href="http://tricks.youknowmymind.com/bcho">@tricks</a>
       <span class="sep">/</span>
       <a href="https://github.com/bcho">@github</a>
