--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
       <a href="http://tricks.youknowmymind.com/bcho">@tricks</a>
       <span class="sep">/</span>
       <a href="https://github.com/bcho">@github</a>
+      <span class="sep">/</span>
+      <a href="/one-sentence/">#一句评</a>
     </div>
   </body>
 </html>
