--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <a class="sidebar-nav" href="/about.html"></a>
+    <a class="sidebar-nav" href="/about/"></a>
     <div class="nav">
       <a href="http://tricks.youknowmymind.com/bcho">@tricks</a>
       <span class="sep">/</span>
